readsb (4.0.2~dev) UNRELEASED; urgency=medium

  * In development
  * Contribution wiedehopf:
    * Demodulator slice_phase improvements
    * Change preamble detection to a modified approach
    * Add configurable preample threshold.

 -- Michael Wolf <michael@mictronics.de>  Mon, 14 Dec 2020 12:01:33 +0100

readsb (4.0.1) stable; urgency=medium

  * Add check for compatible protoc-c compiler version. 
  * Fix out of bounds write in polar range that affected reader CPU accumulator. (credits @wiedehopf)
  * Fix unescaping in Hulc status message.
  * readsbrrd: Improve detection of system time in past with corresponding error message.
  * Fix missing declarations.
  * Set SDR thread name if supported.
  * Removed obsolete debug options.
  * Fix timeout and multiple event RRD update in readsbrrd.
  * Update bootstrap v4.5.0.
  * Gracefully fail when the semaphore can't be created.
  * Fix handling of HTTP return codes.
  * Fix race condition in loading history files.
  * Change database format to reduce file size and increase import performance.
  * Contribution via dump1090-fa
    * Factor out FIFO handling; reimplement as a linked list, not a circular buffer.
    * Use a bounce buffer for rtlsdr on ARM to work around zero-copy problems.
    * Factor out SDR thread CPU monitoring.
    * Avoid false positives for address 000000 in the icao filter hashtable.

 -- Michael Wolf <michael@mictronics.de>  Mon, 14 Dec 2020 11:59:15 +0100

readsb (4.0.0) stable; urgency=medium

  * Version bump: v4.0.0 and later will use protocol buffer instead of JSON.
  * Add switch to activate trace details while mouse hovering along trace segments.
  * Add quick filter switch that shows only selected aircraft.
  * Add SkyVector API key input in GUI to prevent key leakage through JSON file.
  * Add switch to dim map independent of GUI dark mode.
  * Use SVG element of aircraft icon directly in DOM for easy manipulation.
  * Fixed latest statistics.