@@ -203,7 +203,6 @@ static void score_phase(int try_phase, uint16_t *m, int j, unsigned char **bestm
             break;
     }
 
-    assert(bytelen == MODES_SHORT_MSG_BYTES || bytelen == MODES_LONG_MSG_BYTES);
     for (i = 1; i < bytelen; ++i) {
         (*msg)[i] = slice_byte(&pPtr, &phase);
     }
@@ -248,6 +247,11 @@ void demodulate2400(struct mag_buf *mag) {
     uint64_t sum_scaled_signal_power = 0;
 
     msg = msg1;
+
+    // advance ifile artificial clock even if we don't receive anything
+    if (Modes.sdr_type == SDR_IFILE) {
+        Modes.ifile_now = mag->sysTimestamp;
+    }
 
     for (j = 0; j < mlen; j++) {
         uint16_t *pa = &m[j];
@@ -354,6 +358,11 @@ void demodulate2400(struct mag_buf *mag) {
 
         // compute message receive time as block-start-time + difference in the 12MHz clock
         mm.sysTimestampMsg = mag->sysTimestamp + receiveclock_ms_elapsed(mag->sampleTimestamp, mm.timestampMsg);
+
+        // advance ifile artifical clock for every message received
+        if (Modes.sdr_type == SDR_IFILE) {
+            Modes.ifile_now = mm.sysTimestampMsg;
+        }
 
         mm.score = bestscore;
 
