@@ -5,6 +5,7 @@ readsb (4.0.2~dev) UNRELEASED; urgency=medium
     * Demodulator slice_phase improvements
     * Change preamble detection to a modified approach
     * Add configurable preample threshold.
+    * Fake clock when using ifile.
 
  -- Michael Wolf <michael@mictronics.de>  Mon, 14 Dec 2020 12:01:33 +0100
 
